--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "1.0.2",
   "author": "hung-phan",
   "dependencies": {
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "tslib": "^1.7.1"
   },
   "devDependencies": {
     "@types/jest": "^20.0.2",
@@ -12,7 +13,6 @@
     "jest": "^20.0.4",
     "rimraf": "^2.6.1",
     "ts-node": "^3.2.0",
-    "tslib": "^1.7.1",
     "typescript": "^2.4.1",
     "webpack": "^3.2.0"
   },
@@ -43,7 +43,7 @@
   "scripts": {
     "build": "npm run clean && tsc",
     "clean": "rimraf dist",
-    "prepublish": "npm run build",
+    "prepublishOnly": "npm run build",
     "test": "jest"
   },
   "typings": "dist/index.d.ts"
