--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cyclus",
   "description": "IOC and lifecycle for javascript object",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "author": "hung-phan",
   "dependencies": {
     "lodash": "^4.17.4",
@@ -35,6 +35,9 @@
     "transform": {
       "^.+\\.ts$": "<rootDir>/preprocessor.js"
     },
+    "testPathIgnorePatterns": [
+      "dist"
+    ],
     "testMatch": [
       "**/__tests__/*.spec.(ts|js)"
     ]
