--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,9 @@
     ],
     "lib": ["es2017", "dom"],
     "sourceMap": true
-  }
+  },
+  "exclude": [
+    "examples",
+    "node_modules"
+  ]
 }
