--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "tslib": "^1.7.1"
   },
   "devDependencies": {
-    "@types/jest": "^20.0.2",
+    "@types/jest": "^20.0.4",
     "invariant": "^2.2.2",
     "jest": "^20.0.4",
     "rimraf": "^2.6.1",
     "ts-node": "^3.2.0",
+    "tslint": "^5.5.0",
     "typescript": "^2.4.1",
-    "webpack": "^3.2.0"
+    "webpack": "^3.3.0"
   },
   "engines": {
     "node": ">= 4.1.0",
@@ -48,6 +49,7 @@
   "scripts": {
     "build": "npm run clean && tsc --target es6 --outDir dist/es6 && tsc --target esnext --outDir dist/esnext",
     "clean": "rimraf dist",
+    "lint": "tslint -c ./tslint.json 'src/**/*.ts'",
     "prepublishOnly": "npm run build",
     "test": "jest"
   },
