--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cyclus",
   "description": "IOC and lifecycle for javascript object",
-  "version": "1.1.5",
+  "version": "1.2.0",
   "author": "hung-phan",
   "dependencies": {
     "tslib": "^1.7.1"
@@ -47,7 +47,7 @@
   "main": "dist/es6/index.js",
   "module": "dist/esnext/index.js",
   "scripts": {
-    "build": "npm run clean && tsc --target es6 --outDir dist/es6 && tsc --target esnext --outDir dist/esnext",
+    "build": "npm run clean && tsc --target es5 --outDir dist/es5 && tsc --target es6 --outDir dist/es6 && tsc --target esnext --outDir dist/esnext",
     "clean": "rimraf dist",
     "lint": "tslint -c ./tslint.json 'src/**/*.ts'",
     "prepublishOnly": "npm run build",
