--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
   "name": "cyclus",
   "description": "IOC and lifecycle for javascript object",
-  "version": "1.2.4",
+  "version": "1.3.0",
   "author": "hung-phan",
   "dependencies": {
     "tslib": "^1.7.1"
   },
   "devDependencies": {
     "@types/jest": "^20.0.4",
+    "awesome-typescript-loader": "^3.2.1",
+    "babili-webpack-plugin": "^0.1.2",
     "jest": "^20.0.4",
-    "rimraf": "^2.6.1",
     "ts-jest": "^20.0.7",
     "ts-node": "^3.2.0",
     "tslint": "^5.5.0",
-    "typescript": "^2.4.1"
+    "typescript": "^2.4.1",
+    "webpack": "^3.3.0"
   },
   "engines": {
     "node": ">= 4.1.0",
@@ -51,8 +53,7 @@
   "main": "dist/es6/index.js",
   "module": "dist/esnext/index.js",
   "scripts": {
-    "build": "npm run clean && tsc --target es5 --outDir dist/es5 && tsc --target es6 --outDir dist/es6 && tsc --target esnext --outDir dist/esnext",
-    "clean": "rimraf dist",
+    "build": "./scripts/build.sh",
     "lint": "tslint -c ./tslint.json 'src/**/*.ts'",
     "prepublishOnly": "npm run build",
     "test": "jest"
