--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "typeRoots" : [
       "node_modules/@types"
     ],
+    "outDir": "dist/browser",
     "lib": ["es2017", "dom"],
     "sourceMap": true
   },
