--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
   "name": "cyclus",
   "description": "IOC and lifecycle for javascript object",
-  "version": "1.6.0",
+  "version": "1.7.0",
   "author": "hung-phan",
   "dependencies": {
-    "tslib": "^1.8.0"
+    "tslib": "^1.9.0"
   },
   "devDependencies": {
-    "@types/jest": "^21.1.5",
-    "awesome-typescript-loader": "^3.2.3",
-    "babel-minify-webpack-plugin": "^0.2.0",
-    "jest": "^21.2.1",
-    "ts-jest": "^21.1.4",
-    "ts-node": "^3.3.0",
-    "tslint": "^5.8.0",
-    "typescript": "^2.5.3",
-    "webpack": "^3.8.1"
+    "@types/jest": "^22.2.3",
+    "awesome-typescript-loader": "^5.0.0",
+    "jest": "^22.4.3",
+    "ts-jest": "^22.4.4",
+    "ts-node": "^6.0.1",
+    "tslint": "^5.9.1",
+    "typescript": "^2.8.3",
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15"
   },
   "engines": {
     "node": ">= 4.1.0",
