--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "version": "1.7.0",
   "author": "hung-phan",
   "dependencies": {
-    "tslib": "^1.9.0"
+    "tslib": "^1.9.3"
   },
   "devDependencies": {
-    "@types/jest": "^22.2.3",
-    "awesome-typescript-loader": "^5.0.0",
-    "jest": "^22.4.3",
-    "ts-jest": "^22.4.4",
-    "ts-node": "^6.0.1",
-    "tslint": "^5.9.1",
-    "typescript": "^2.8.3",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.15"
+    "@types/jest": "^23.3.1",
+    "awesome-typescript-loader": "^5.2.0",
+    "jest": "^23.4.2",
+    "ts-jest": "^23.0.1",
+    "ts-node": "^7.0.0",
+    "tslint": "^5.11.0",
+    "typescript": "^2.9.2",
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "webpack": "^4.16.3",
+    "webpack-cli": "^3.1.0"
   },
   "engines": {
     "node": ">= 4.1.0",
@@ -40,6 +40,7 @@
     "testPathIgnorePatterns": [
       "dist"
     ],
+    "testURL": "http:localhost/",
     "testMatch": [
       "**/__tests__/*.spec.(ts|js)"
     ]
