--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
   "name": "cyclus",
   "description": "IOC and lifecycle for javascript object",
-  "version": "1.10.0",
+  "version": "2.0.0",
   "author": "hung-phan",
   "dependencies": {
-    "tslib": "^2.0.0"
+    "tslib": "^2.1.0"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.5",
-    "awesome-typescript-loader": "^5.2.1",
-    "jest": "^26.1.0",
-    "ts-jest": "^26.1.3",
-    "ts-node": "^8.4.1",
-    "tslint": "^6.1.2",
-    "typescript": "^3.6.3",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.40.2",
-    "webpack-cli": "^3.3.8"
+    "@types/jest": "^26.0.22",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.4",
+    "ts-loader": "^8.1.0",
+    "ts-node": "^9.1.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.2.3",
+    "webpack": "^5.28.0",
+    "webpack-cli": "^4.6.0"
   },
   "engines": {
     "node": ">= 4.1.0",
