--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cyclus",
   "description": "IOC and lifecycle for javascript object",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "author": "hung-phan",
   "dependencies": {
     "tslib": "^2.1.0"
@@ -51,7 +51,7 @@
     "lifecycle"
   ],
   "license": "MIT",
-  "main": "dist/es6/index.js",
+  "main": "dist/esnext/index.js",
   "module": "dist/esnext/index.js",
   "scripts": {
     "build": "./scripts/build.sh",
